# archive-maildir

./: CHANGELOG.md  Cargo.toml
.github/workflows/: build.yml
src/: archiver.rs  args.rs  lib.rs  main.rs
