[package]
name = "archive-maildir"
version = "0.2.0"
edition = "2021"
authors = ["Emanuele Di Giacomo <emanuele@digiacomo.cc>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
maildir = "0.5"
chrono = "0.4"
log = "0.4"
simple_logger = "1.13"
mktemp = "0.4"
