[package]
name = "archive-maildir"
version = "0.2.0"
edition = "2021"
authors = ["Emanuele Di Giacomo <emanuele@digiacomo.cc>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
maildir = "0"
time = { version = ">=0.2.23", features = ["parsing"] }
log = "0"
simple_logger = "2"
mktemp = "0"
